--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/command/add/AddCommand.java=UTF-8
+encoding//src/test/java/command/add/AddCommandTest.java=UTF-8
