--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.2")
+    testImplementation('org.mockito:mockito-core:4.3.1');
+    testImplementation("org.mockito:mockito-junit-jupiter:4.3.1")
+    testImplementation("org.assertj:assertj-core:3.22.0")
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
@@ -18,6 +22,7 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
 }
 
 test {
